--- a/src/openfaas-configuration-extensions.csproj
+++ b/src/openfaas-configuration-extensions.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Microsoft.Extensions.Configuration</RootNamespace>
     <PackageId>Redpanda.OpenFaaS.Extensions.Configuration</PackageId>
-    <Version>0.2</Version>
+    <Version>0.2.1</Version>
     <Authors>Goncalo Oliveira</Authors>
     <Company>RedPanda Ltd</Company>
     <Description>OpenFaaS csharp functions</Description>
+    <RepositoryUrl>https://github.com/redpandaltd/openfaas-configuration-extensions</RepositoryUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
