--- a/src/openfaas-configuration-extensions.csproj
+++ b/src/openfaas-configuration-extensions.csproj
@@ -3,17 +3,17 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Microsoft.Extensions.Configuration</RootNamespace>
-    <PackageId>Redpanda.OpenFaaS.Extensions.Configuration</PackageId>
-    <Version>0.2.1</Version>
+    <PackageId>Redpanda.Extensions.OpenFaaS.Configuration</PackageId>
+    <Version>0.3</Version>
     <Authors>Goncalo Oliveira</Authors>
     <Company>RedPanda Ltd</Company>
-    <Description>OpenFaaS csharp functions</Description>
-    <RepositoryUrl>https://github.com/redpandaltd/openfaas-configuration-extensions</RepositoryUrl>
+    <Description>OpenFaaS ASPNET Functions</Description>
+    <RepositoryUrl>https://github.com/redpandaltd/faas-configuration-extensions</RepositoryUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
